sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/account__c.field-meta.xml
<CustomField>
    <fullName>account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>名刺</relationshipLabel>
    <relationshipName>nc_account</relationshipName>
    <type>Lookup</type>
</CustomField>