sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/accountLink__c.field-meta.xml
<CustomField>
    <fullName>accountLink__c</fullName>
    <formula>if(  ISBLANK( account__c ) , image( &quot;/resource/&quot; &amp; $Label.SB_Text_UnregisteredIcon,  $Label.SB_MSG_Unregistered ) , HYPERLINK( &quot;/&quot; &amp;  account__r.Id ,  account__r.Name ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>取引先</label>
    <type>Text</type>
</CustomField>