sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/accountRegDateTime__c.field-meta.xml
<CustomField>
    <fullName>accountRegDateTime__c</fullName>
    <description>名刺を取引先と取引先責任者に登録した日時</description>
    <label>取引先取込日時</label>
    <type>DateTime</type>
</CustomField>