sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/address_bld__c.field-meta.xml
<CustomField>
    <fullName>address_bld__c</fullName>
    <label>建物名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>