sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/address_eng__c.field-meta.xml
<CustomField>
    <fullName>address_eng__c</fullName>
    <description>英語名刺の場合</description>
    <label>英語住所</label>
    <type>TextArea</type>
</CustomField>