sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/address_pref__c.field-meta.xml
<CustomField>
    <fullName>address_pref__c</fullName>
    <label>都道府県</label>
    <length>10</length>
    <type>Text</type>
</CustomField>