sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/bk_image__c.field-meta.xml
<CustomField>
    <fullName>bk_image__c</fullName>
    <formula>if( isblank(bk_image_id__c) , null , image(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; bk_image_id__c , &quot;裏面&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>裏面</label>
    <type>Text</type>
</CustomField>