sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/bk_image_id__c.field-meta.xml
<CustomField>
    <fullName>bk_image_id__c</fullName>
    <description>裏面画像の添付ファイルのID</description>
    <label>裏画像ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>