sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/bk_thumbnail__c.field-meta.xml
<CustomField>
    <fullName>bk_thumbnail__c</fullName>
    <formula>if(isblank(bk_image_id__c) || isblank(bk_width__c) || isblank(bk_height__c) , null , hyperlink( &quot;/servlet/servlet.FileDownload?file=&quot; &amp; bk_image_id__c , image(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; bk_image_id__c , &quot;サムネイル(裏面)&quot; , bk_height__c / 4 , bk_width__c / 4) , &quot;_blank&quot; ) )</formula>
    <label>サムネイル（裏面）</label>
    <type>Text</type>
</CustomField>