sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/bk_thumbnail_id__c.field-meta.xml
<CustomField>
    <fullName>bk_thumbnail_id__c</fullName>
    <label>裏サムネイルID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>