sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/bk_width__c.field-meta.xml
<CustomField>
    <fullName>bk_width__c</fullName>
    <description>単位: pixel</description>
    <label>裏画像横サイズ</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>