sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/branch_name__c.field-meta.xml
<CustomField>
    <fullName>branch_name__c</fullName>
    <label>支社支店</label>
    <length>255</length>
    <type>Text</type>
</CustomField>