sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/card_exchange_date__c.field-meta.xml
<CustomField>
    <fullName>card_exchange_date__c</fullName>
    <label>名刺交換日</label>
    <type>Date</type>
</CustomField>