sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/card_id__c.field-meta.xml
<CustomField>
    <fullName>card_id__c</fullName>
    <label>名刺ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>