sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/Company_Name_Kana_1st__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_Kana_1st__c</fullName>
    <formula>IF( ISNULL(company_name_kana__c) , &apos;&apos;,  LEFT(company_name_kana__c, 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>会社（カナ）の最初の1文字</label>
    <type>Text</type>
</CustomField>