sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/company_name_kana__c.field-meta.xml
<CustomField>
    <fullName>company_name_kana__c</fullName>
    <label>会社名カナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>