sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/contactLink__c.field-meta.xml
<CustomField>
    <fullName>contactLink__c</fullName>
    <formula>if(  ISBLANK(  contact__c  ) , image(  &quot;/resource/&quot; &amp; $Label.SB_Text_UnregisteredIcon , $Label.SB_MSG_Unregistered ) , HYPERLINK( &quot;/&quot; &amp;   contact__r.Id  ,   contact__r.LastName &amp; &quot; &quot; &amp;  contact__r.FirstName  ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>取引先責任者</label>
    <type>Text</type>
</CustomField>