sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/date__c.field-meta.xml
<CustomField>
    <fullName>date__c</fullName>
    <description>同じ名刺があった場合、どちらの名刺が最新かを比較するときに使う項目。</description>
    <formula>BLANKVALUE( card_exchange_date__c ,  DATEVALUE( LastModifiedDate ) )</formula>
    <label>日付</label>
    <type>Date</type>
</CustomField>