sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/delivery_icon__c.field-meta.xml
<CustomField>
    <fullName>delivery_icon__c</fullName>
    <formula>case( delivery_type__c , &quot;1&quot;, image( &quot;/img/msg_icons/warning16.png&quot;, &quot;一次納品&quot;) , &quot;2&quot; , image(&quot;/img/msg_icons/confirm16.png&quot;, &quot;最終納品&quot;) , &quot;&quot;)</formula>
    <label>納品状態</label>
    <type>Text</type>
</CustomField>