sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/delivery_type__c.field-meta.xml
<CustomField>
    <fullName>delivery_type__c</fullName>
    <inlineHelpText>1: 一次納品
2: 最終納品</inlineHelpText>
    <label>納品タイプ</label>
    <length>10</length>
    <type>Text</type>
</CustomField>