sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/direction__c.field-meta.xml
<CustomField>
    <fullName>direction__c</fullName>
    <description>0: 横画像
1: 縦画像</description>
    <inlineHelpText>0: 横画像
1: 縦画像</inlineHelpText>
    <label>表画像縦横フラグ</label>
    <length>1</length>
    <type>Text</type>
</CustomField>