sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/division__c.field-meta.xml
<CustomField>
    <fullName>division__c</fullName>
    <label>所属</label>
    <length>255</length>
    <type>Text</type>
</CustomField>