sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/division_name__c.field-meta.xml
<CustomField>
    <fullName>division_name__c</fullName>
    <label>所属役職</label>
    <type>TextArea</type>
</CustomField>