sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/env_machine_name__c.field-meta.xml
<CustomField>
    <fullName>env_machine_name__c</fullName>
    <description>スキャンを実行したPCのWindowsコンピュータ名</description>
    <label>コンピュータ名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>