sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/error__c.field-meta.xml
<CustomField>
    <fullName>error__c</fullName>
    <label>エラー情報</label>
    <type>TextArea</type>
</CustomField>