sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/fax1__c.field-meta.xml
<CustomField>
    <fullName>fax1__c</fullName>
    <label>FAX番号</label>
    <type>Phone</type>
</CustomField>