sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/fax2__c.field-meta.xml
<CustomField>
    <fullName>fax2__c</fullName>
    <label>FAX番号2</label>
    <type>Phone</type>
</CustomField>