sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/first_name__c.field-meta.xml
<CustomField>
    <fullName>first_name__c</fullName>
    <description>英語名刺の場合</description>
    <label>ファーストネーム</label>
    <length>80</length>
    <type>Text</type>
</CustomField>