sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/freehandmemo__c.field-meta.xml
<CustomField>
    <fullName>freehandmemo__c</fullName>
    <label>手書きメモ</label>
    <type>TextArea</type>
</CustomField>