sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/freehandmemo_flag__c.field-meta.xml
<CustomField>
    <fullName>freehandmemo_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>手書きメモも入力する</label>
    <type>Checkbox</type>
</CustomField>