sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/GeoLocation__c.field-meta.xml
<CustomField>
    <fullName>GeoLocation__c</fullName>
    <label>緯度経度</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>