sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/GetJinjiIdo__c.field-meta.xml
<CustomField>
    <fullName>GetJinjiIdo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>人事異動情報取得</label>
    <type>Checkbox</type>
</CustomField>