sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/GetJinjiIdoDate__c.field-meta.xml
<CustomField>
    <fullName>GetJinjiIdoDate__c</fullName>
    <label>人事異動情報取得日</label>
    <type>Date</type>
</CustomField>