sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/GetJinjiIdoExec__c.field-meta.xml
<CustomField>
    <fullName>GetJinjiIdoExec__c</fullName>
    <defaultValue>false</defaultValue>
    <label>人事異動情報取得中</label>
    <type>Checkbox</type>
</CustomField>