sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/google_map__c.field-meta.xml
<CustomField>
    <fullName>google_map__c</fullName>
    <formula>HYPERLINK( &quot;http://maps.google.co.jp/maps?hl=ja&amp;gl=jp&amp;q=&quot;&amp; address__c,&quot;Map&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Google Map</label>
    <type>Text</type>
</CustomField>