sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/height__c.field-meta.xml
<CustomField>
    <fullName>height__c</fullName>
    <description>単位: pixel</description>
    <label>表画像縦サイズ</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>