sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/image__c.field-meta.xml
<CustomField>
    <fullName>image__c</fullName>
    <formula>if( isblank(image_id__c) , null , image(&quot;/servlet/servlet.FileDownload?file=&quot; &amp;  image_id__c , &quot;表面&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>表面</label>
    <type>Text</type>
</CustomField>