sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/image_id__c.field-meta.xml
<CustomField>
    <fullName>image_id__c</fullName>
    <description>表面の画像の添付ファイルのID</description>
    <label>表画像ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>