sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/isNotOverContactwrite__c.field-meta.xml
<CustomField>
    <fullName>isNotOverContactwrite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>既存取引先責任者上書き不可</label>
    <type>Checkbox</type>
</CustomField>