sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/isNotOverwrite__c.field-meta.xml
<CustomField>
    <fullName>isNotOverwrite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>名刺を取引先と取引先責任者に登録する時、既存の取引先に取引先責任者を紐付ける場合、取引先の情報を名刺で上書きしないときに true を設定し、そうでないときは false にコントローラが設定する。最終納品時にトリガでこのフラグを参照して取引先を更新するかどうかを決定する。</description>
    <label>既存取引先上書き不可</label>
    <type>Checkbox</type>
</CustomField>