sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/key__c.field-meta.xml
<CustomField>
    <fullName>key__c</fullName>
    <description>同じ名刺を特定するためのキー。氏名とメールアドレスを&amp;で接続したもの。</description>
    <externalId>true</externalId>
    <label>キー</label>
    <length>255</length>
    <type>Text</type>
</CustomField>