sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/latitude__c.field-meta.xml
<CustomField>
    <fullName>latitude__c</fullName>
    <description>名刺登録した場所の緯度</description>
    <label>緯度</label>
    <precision>12</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>