sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/lead__c.field-meta.xml
<CustomField>
    <fullName>lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>リード</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>名刺</relationshipLabel>
    <relationshipName>nc_lead</relationshipName>
    <type>Lookup</type>
</CustomField>