sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/leadLink__c.field-meta.xml
<CustomField>
    <fullName>leadLink__c</fullName>
    <formula>if( ISBLANK(  lead__c  ) , image(  &quot;/resource/&quot; &amp; $Label.SB_Text_UnregisteredIcon, $Label.SB_MSG_Unregistered ) , HYPERLINK( &quot;/&quot; &amp;  lead__r.Id  ,  lead__r.LastName &amp; &quot; &quot; &amp;  lead__r.FirstName  ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>リード</label>
    <type>Text</type>
</CustomField>