sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/leadRegDateTime__c.field-meta.xml
<CustomField>
    <fullName>leadRegDateTime__c</fullName>
    <description>名刺をリードに取込んだ日時</description>
    <label>リード取込日時</label>
    <type>DateTime</type>
</CustomField>