sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/list_name__c.field-meta.xml
<CustomField>
    <fullName>list_name__c</fullName>
    <label>リスト名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>