sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/location__c.field-meta.xml
<CustomField>
    <fullName>location__c</fullName>
    <formula>if(  ISBLANK(longitude__c) ||  ISBLANK(longitude__c) , image( &quot;/resource/&quot; &amp; $Label.SB_Text_UnregisteredIcon , $Label.SB_MSG_Unregistered ) , HYPERLINK(&quot;http://maps.google.co.jp/maps?q=&quot; &amp;  text( latitude__c ) &amp; &quot;,&quot; &amp;  text(longitude__c) &amp; &quot;&amp;iwloc=A&quot;, $Label.SB_MSG_CheckAMap , &quot;_blank&quot;) )</formula>
    <label>登録場所</label>
    <type>Text</type>
</CustomField>