sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/longitude__c.field-meta.xml
<CustomField>
    <fullName>longitude__c</fullName>
    <description>名刺登録した場所の経度</description>
    <label>経度</label>
    <precision>13</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>