sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/memo__c.field-meta.xml
<CustomField>
    <fullName>memo__c</fullName>
    <description>スキャン後に入力したメモ</description>
    <label>メモ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>