sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/middle_name__c.field-meta.xml
<CustomField>
    <fullName>middle_name__c</fullName>
    <description>英語名刺の場合</description>
    <label>ミドルネーム</label>
    <length>80</length>
    <type>Text</type>
</CustomField>