sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/mobile__c.field-meta.xml
<CustomField>
    <fullName>mobile__c</fullName>
    <label>携帯電話番号</label>
    <type>Phone</type>
</CustomField>