sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/name_kana__c.field-meta.xml
<CustomField>
    <fullName>name_kana__c</fullName>
    <formula>IF(ISBLANK( last_name__c ) , 
  person_name_last_kana__c &amp; person_name_first_kana__c,
  last_name__c  &amp;  first_name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>氏名カナ</label>
    <type>Text</type>
</CustomField>