sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>氏名とメールアドレスが同じ名刺の内、最新のものへのリンク。最新のものは、この項目は null になる。最新かどうかの判断は「日付」(date__c)で行う。このリンクの設定は最終納品のときだけ行う。</description>
    <label>最新名刺</label>
    <referenceTo>NameCard__c</referenceTo>
    <relationshipLabel>古い名刺</relationshipLabel>
    <relationshipName>nc_parent</relationshipName>
    <type>Lookup</type>
</CustomField>