sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/ParentLink__c.field-meta.xml
<CustomField>
    <fullName>ParentLink__c</fullName>
    <formula>if(  ISBLANK( Parent__c ) ,  $Label.SB_MSG_ThisIsTheLatest  ,  HYPERLINK(&quot;/&quot; &amp;  Parent__r.Id , $Label.SB_MSG_ViewRelated) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>最新名刺</label>
    <type>Text</type>
</CustomField>