sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/person_name_first_kana__c.field-meta.xml
<CustomField>
    <fullName>person_name_first_kana__c</fullName>
    <label>名カナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>