sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/person_name_last__c.field-meta.xml
<CustomField>
    <fullName>person_name_last__c</fullName>
    <label>姓</label>
    <length>127</length>
    <type>Text</type>
</CustomField>