sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/Person_Name_Last_Kana_1st__c.field-meta.xml
<CustomField>
    <fullName>Person_Name_Last_Kana_1st__c</fullName>
    <formula>IF( ISBLANK ( person_name_last_kana__c ) ,
IF (ISBLANK ( last_name__c ) , null , LEFT ( last_name__c , 1 )) ,
LEFT ( person_name_last_kana__c , 1)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>姓カナの1文字目</label>
    <type>Text</type>
</CustomField>