sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/portrait__c.field-meta.xml
<CustomField>
    <fullName>portrait__c</fullName>
    <formula>if( isblank( portrait_id__c ) , null , hyperlink(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; portrait_id__c , image(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; portrait_id__c , &quot;写真&quot;, 160 , 120 ) , &quot;_blank&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>写真</label>
    <type>Text</type>
</CustomField>