sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/portrait_id__c.field-meta.xml
<CustomField>
    <fullName>portrait_id__c</fullName>
    <label>写真ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>