sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/RenkeiMessage__c.field-meta.xml
<CustomField>
    <fullName>RenkeiMessage__c</fullName>
    <label>自動連携処理情報</label>
    <length>255</length>
    <type>Text</type>
</CustomField>