sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/Saishin__c.field-meta.xml
<CustomField>
    <fullName>Saishin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>この名刺が最新</label>
    <type>Checkbox</type>
</CustomField>