sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/tel1__c.field-meta.xml
<CustomField>
    <fullName>tel1__c</fullName>
    <label>電話番号</label>
    <type>Phone</type>
</CustomField>