sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/tel2__c.field-meta.xml
<CustomField>
    <fullName>tel2__c</fullName>
    <label>電話番号2</label>
    <type>Phone</type>
</CustomField>