sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/tenshokugonomeishi__c.field-meta.xml
<CustomField>
    <fullName>tenshokugonomeishi__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>転職後の名刺</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>NameCard__c.delivery_type__c</field>
            <operation>equals</operation>
            <value>2</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>NameCard__c</referenceTo>
    <relationshipLabel>名刺 (転職前の名刺)</relationshipLabel>
    <relationshipName>meishiwSLt</relationshipName>
    <type>Lookup</type>
</CustomField>