sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/tenshokuzumi__c.field-meta.xml
<CustomField>
    <fullName>tenshokuzumi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>転職済み</label>
    <type>Checkbox</type>
</CustomField>