sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/thumbnail__c.field-meta.xml
<CustomField>
    <fullName>thumbnail__c</fullName>
    <formula>if(isblank(image_id__c) || isblank(width__c) || isblank(height__c) , null , hyperlink( &quot;/servlet/servlet.FileDownload?file=&quot; &amp; image_id__c , image(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; image_id__c  , &quot;サムネイル&quot; , height__c / 4 , width__c / 4) ,  &quot;_blank&quot; ) )</formula>
    <label>サムネイル</label>
    <type>Text</type>
</CustomField>