sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/thumbnail_base64__c.field-meta.xml
<CustomField>
    <fullName>thumbnail_base64__c</fullName>
    <description>iphone用</description>
    <label>base64サムネイル</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>