sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/thumbnail_id__c.field-meta.xml
<CustomField>
    <fullName>thumbnail_id__c</fullName>
    <label>表サムネイルID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>