sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/Title_and_Name__c.field-meta.xml
<CustomField>
    <fullName>Title_and_Name__c</fullName>
    <formula>title_name__c &amp; &quot;   &quot; &amp; IMAGE(&quot;/img/icon/profile24.png&quot;, &quot;icon&quot;) &amp; &quot; &quot; &amp; Name</formula>
    <label>役職</label>
    <type>Text</type>
</CustomField>