sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/title_name__c.field-meta.xml
<CustomField>
    <fullName>title_name__c</fullName>
    <label>役職</label>
    <length>255</length>
    <type>Text</type>
</CustomField>