sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/web_url1__c.field-meta.xml
<CustomField>
    <fullName>web_url1__c</fullName>
    <label>URL</label>
    <type>Url</type>
</CustomField>