sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/web_url2__c.field-meta.xml
<CustomField>
    <fullName>web_url2__c</fullName>
    <label>URL2</label>
    <type>Url</type>
</CustomField>