sfdx-source/SmartVisca/main/default/objects/NameCard__c/fields/zip_code__c.field-meta.xml
<CustomField>
    <fullName>zip_code__c</fullName>
    <label>郵便番号</label>
    <length>10</length>
    <type>Text</type>
</CustomField>