sfdx-source/SmartVisca/main/default/objects/NameCard__c/validationRules/DisableQueueOnHistoryTrigger.validationRule-meta.xml
<ValidationRule>
    <fullName>DisableQueueOnHistoryTrigger</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Setup.SmartViscaConfig__c.TriggerHistoryIsActive__c, LEFT(OwnerId, 3) = &quot;00G&quot;)</errorConditionFormula>
    <errorMessage>「トリガで名刺履歴を保存する」がオンの場合、所有者にキューを選択できません。</errorMessage>
</ValidationRule>