sfdx-source/SmartVisca/main/default/objects/NameCard__c/listViews/lastMonth.listView-meta.xml
<ListView>
    <fullName>lastMonth</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>company_name__c</columns>
    <columns>division__c</columns>
    <columns>title_name__c</columns>
    <columns>tel1__c</columns>
    <columns>email__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>card_exchange_date__c</columns>
    <columns>list_name__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>card_exchange_date__c</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>06 先月の名刺</label>
</ListView>