sfdx-source/SmartVisca/main/default/objects/NameCard__c/listViews/not_registered.listView-meta.xml
<ListView>
    <fullName>not_registered</fullName>
    <columns>card_exchange_date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>company_name__c</columns>
    <columns>division__c</columns>
    <columns>title_name__c</columns>
    <columns>tel1__c</columns>
    <columns>email__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>list_name__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>account__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>contact__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>lead__c</field>
        <operation>equals</operation>
    </filters>
    <label>08 未登録の名刺</label>
</ListView>