sfdx-source/SmartVisca/main/default/objects/NameCard__c/listViews/thisMonth.listView-meta.xml
<ListView>
    <fullName>thisMonth</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>delivery_icon__c</columns>
    <columns>NAME</columns>
    <columns>company_name__c</columns>
    <columns>division__c</columns>
    <columns>title_name__c</columns>
    <columns>tel1__c</columns>
    <columns>email__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>card_exchange_date__c</columns>
    <columns>list_name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>card_exchange_date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>05 今月の名刺</label>
    <language>ja</language>
</ListView>